@startuml
skinparam shadowing false
hide circle
skinparam linetype ortho

entity "entidades" as ENT {
    *id : UUID <<PK>>
    --
    *nombre : VARCHAR(64) <<U>>
    *creada_en : TIMESTAMPTZ
    *actualizada : TIMESTAMPTZ
}

entity "direcciones" as DIR {
    *id : UUID <<PK>>
    --
    *valor : CHAR(42) <<U>>
    *entidad_id : UUID <<FK>>
    *aniadida_en : TIMESTAMPTZ
    --
    idx (entidad_id)
}

entity "alertas" as ALER {
    *id : UUID <<PK>>
    --
    *token_simbolo : VARCHAR(16)
    *mercado : VARCHAR(16)
    *umbral_valor : NUMERIC(28,8)
    *umbral_cruce : cruce
    *webhook_url_enc : BYTEA
    *estado : estado_alerta
    *creada_en : TIMESTAMPTZ
    ultimo_disparo : TIMESTAMPTZ
    ultimo_intento : TIMESTAMPTZ
    --
    idx (token_simbolo, estado)
}

entity "notificaciones" as NOTI {
    *id : UUID <<PK>>
    --
    *alerta_id : UUID <<FK>>
    *precio_disparador : NUMERIC(28,8)
    *instante_emision : TIMESTAMPTZ
    *estado : estado_entrega
    *intento : INTEGER
    *proximo_intento : TIMESTAMPTZ
    ultimo_error : TEXT
    entregada_en : TIMESTAMPTZ
    --
    idx (alerta_id, instante_emision)
    idx (estado, proximo_intento)
}

entity "lb_trades" as LBT {
    *tid : TEXT <<PK>>
    --
    *mercado : VARCHAR(16)
    *token : VARCHAR(64)
    *direccion : CHAR(42)
    *lado : VARCHAR(4)
    *volumen_usd : DOUBLE
    *ts : DOUBLE
    --
    idx (mercado, token, ts)
    idx (ts)
}

ENT ||--o{ DIR   : "1 entidad : N direcciones\nON DELETE CASCADE"
ALER ||--o{ NOTI : "1 alerta : N notificaciones\nON DELETE CASCADE"

note right of ALER
  webhook_url_enc cifrado con
  pgp_sym_encrypt / pgp_sym_decrypt
  (RS-10).
end note

note right of NOTI
  proximo_intento + idx
  materializan la cola virtual
  de reintentos (RS-07).
end note

note right of LBT
  Tabla técnica derivada:
  histórico continuo de trades
  para snapshots de ventanas
  largas (1d, 1w) y recuperación
  tras reinicio.
  PK = tid: dedupe natural
  entre WS y REST.
end note

@enduml
